--- a/src/nuclio/common/components/breadcrumbs-dropdown/breadcrumbs-dropdown.less
+++ b/src/nuclio/common/components/breadcrumbs-dropdown/breadcrumbs-dropdown.less
@@ -19,17 +19,17 @@
             background-color: transparent;
 
             &:hover {
-                background-color: @ncl-pale-grey;
+                background-color: @pale-grey;
                 transition: transform .2s linear;
             }
         }
 
         .ncl-dropdown-expanded {
-            background-color: @ncl-pale-grey;
+            background-color: @pale-grey;
             transform: rotate(90deg);
 
             .igz-icon-right {
-                color: @ncl-dusk-three;
+                color: @dusk-three;
             }
         }
     }
