--- a/src/nuclio/common/components/collapsing-row/collapsing-row.less
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.less
@@ -2,7 +2,7 @@
     margin-bottom: 9px;
 
     .title-block.common-table-row {
-        border: 1px solid @ncl-pale-grey;
+        border: 1px solid @pale-grey;
         box-shadow: none;
         min-height: 49px;
 
@@ -16,12 +16,12 @@
 
         &:hover {
             .common-table-cells-container {
-                background-color: @ncl-white;
+                background-color: @white;
             }
 
             .actions-menu {
                 visibility: visible;
-                background-color: @ncl-white;
+                background-color: @white;
             }
         }
     }
@@ -38,11 +38,11 @@
 
             &.igz-icon-right, &.igz-icon-down {
                 font-size: 12px;
-                .nclDuskThree(0.64);
+                .duskThree(0.64);
                 color: @color;
 
                 &:hover {
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                 }
             }
         }
