--- a/src/nuclio/common/components/deploy-log/deploy-log.less
+++ b/src/nuclio/common/components/deploy-log/deploy-log.less
@@ -1,8 +1,8 @@
 .ncl-deploy-log-wrapper {
     .log-panel {
         .logs-common();
-        background-color: @ncl-dark-grey;
-        color: @ncl-very-light-grey;
+        background-color: @dark-grey;
+        color: @light-grey-three;
         padding: 5px;
         margin: 21px 0 0 4px;
         min-height: 280px;
@@ -11,7 +11,7 @@
 
         .log-entry {
             .log-entry-time {
-                color: @ncl-solid-grey;
+                color: @solid-grey;
             }
 
             .log-entry-level-debug{
@@ -23,11 +23,11 @@
             }
 
             .log-entry-level-warn{
-                color: @ncl-sunflower-yellow;
+                color: @sunflower-yellow;
             }
 
             .log-entry-level-error {
-                color: @ncl-darkish-pink;
+                color: @darkish-pink;
             }
 
             .log-entry-message {
