--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -10,7 +10,7 @@
             width: 178px;
 
             .error {
-                color: @ncl-darkish-pink;
+                color: @darkish-pink;
                 font-size: 12px;
                 white-space: nowrap;
             }
@@ -21,7 +21,7 @@
             width: 154px;
 
             .error {
-                color: @ncl-darkish-pink;
+                color: @darkish-pink;
                 font-size: 12px;
                 white-space: nowrap;
             }
@@ -43,7 +43,7 @@
 
     .no-class-selected {
         line-height: 48px;
-        .nclDuskThree(0.64);
+        .duskThree(0.64);
         color: @color;
     }
 }
