--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -2,16 +2,16 @@
     .input-wrapper {
         width: 100%;
         display: flex;
-        background-color: @ncl-white;
+        background-color: @white;
         position: relative;
-        border: 1px solid @ncl-pale-grey;
+        border: 1px solid @pale-grey;
 
         .check-row {
             width: 28px;
             display: flex;
             align-items: center;
             justify-content: center;
-            border-right: 1px solid @ncl-pale-grey;
+            border-right: 1px solid @pale-grey;
         }
 
         .three-dot-menu {
@@ -56,11 +56,11 @@
             .validating-input-field {
                 .input-field {
                     &[readonly]:focus, &:not(:focus) {
-                        border-right: 1px solid @ncl-pale-grey;
+                        border-right: 1px solid @pale-grey;
                     }
 
                     &.invalid:not(:focus) {
-                        border-right: 1px solid @ncl-darkish-pink;
+                        border-right: 1px solid @darkish-pink;
                     }
                 }
             }
@@ -92,11 +92,11 @@
             .validating-input-field {
                 .input-field {
                     &[readonly]:focus, &:not(:focus) {
-                        border-left: 1px solid @ncl-pale-grey;
+                        border-left: 1px solid @pale-grey;
                     }
 
                     &.invalid:not(:focus) {
-                        border-left: 1px solid @ncl-darkish-pink;
+                        border-left: 1px solid @darkish-pink;
                     }
                 }
             }
@@ -111,7 +111,7 @@
 
             .default-dropdown {
                 .default-dropdown-field {
-                    background-color: @ncl-white;
+                    background-color: @white;
                     border: none;
                     border-radius: 0;
                 }
