--- a/src/nuclio/common/components/monaco/monaco.less
+++ b/src/nuclio/common/components/monaco/monaco.less
@@ -2,8 +2,8 @@
     .ncl-monaco-wrapper {
         padding-top: 20px;
         height: 100%;
-        border: 1px solid @ncl-pale-grey;
-        background-color: @ncl-white;
+        border: 1px solid @pale-grey;
+        background-color: @white;
 
         &.no-top-padding {
             padding-top: 0;
