--- a/src/nuclio/common/components/nuclio-search-input/search-input.less
+++ b/src/nuclio/common/components/nuclio-search-input/search-input.less
@@ -1,10 +1,10 @@
 .ncl-search-input {
     position: relative;
-    color: @ncl-silver;
+    color: @silver;
 
     .container-search-input {
         background-color: transparent;
-        border-bottom: 1px solid @ncl-silver;
+        border-bottom: 1px solid @silver;
         font-size: 13px;
         font-weight: 400;
         height: 36px;
@@ -15,26 +15,26 @@
         width: 100%;
 
         &::-webkit-input-placeholder {
-            color: @ncl-silver;
+            color: @silver;
         }
 
         &:-moz-placeholder { /* Firefox 18- */
-            color: @ncl-silver;
+            color: @silver;
         }
 
         &::-moz-placeholder {  /* Firefox 19+ */
-            color: @ncl-silver;
+            color: @silver;
         }
 
         &:-ms-input-placeholder {
-            color: @ncl-silver;
+            color: @silver;
         }
 
         &:focus {
-            border-bottom: 1px solid @ncl-light-blue;
+            border-bottom: 1px solid @light-blue;
 
             &, & + .igz-icon-search:before {
-                color: @ncl-dusk-three;
+                color: @dusk-three;
             }
 
             &::-webkit-input-placeholder {
@@ -61,7 +61,7 @@
         left: 8px;
         top: 5px;
         z-index: 1;
-        color: @ncl-silver;
+        color: @silver;
     }
 
     input::-ms-clear {
