--- a/src/nuclio/common/less/buttons.less
+++ b/src/nuclio/common/less/buttons.less
@@ -1,5 +1,5 @@
 .ncl-primary-button {
-    color: @ncl-white;
+    color: @white;
     font-size: 12px;
     display: inline-block;
     vertical-align: top;
@@ -11,17 +11,17 @@
     height: 32px;
     line-height: initial;
     border-radius: 2px;
-    background-color: @ncl-orange;
-    border: solid 1px @ncl-orange;
+    background-color: @orange;
+    border: solid 1px @orange;
 
     &:hover {
-        background-color: @ncl-dark-orange;
-        border: solid 1px @ncl-dark-orange;
+        background-color: @dark-orange;
+        border: solid 1px @dark-orange;
     }
 
     &.disabled {
-        background-color: @ncl-pale-grey;
-        border: solid 1px @ncl-pale-grey;
+        background-color: @pale-grey;
+        border: solid 1px @pale-grey;
         box-shadow: none;
         cursor: default;
     }
@@ -33,7 +33,7 @@
     display: inline-block;
     vertical-align: top;
     position: relative;
-    color: @ncl-greyish-purple;
+    color: @greyish-purple;
     text-transform: uppercase;
     line-height: initial;
     height: 32px;
@@ -42,30 +42,30 @@
     padding: 9px 17px;
 
     &:hover {
-        .nclBlack(0.13);
+        .black(0.13);
         box-shadow: 0 1px 3px 0 @color;
-        border: solid 1px @ncl-pale-grey;
+        border: solid 1px @pale-grey;
         border-radius: 2px;
-        background-color: @ncl-white;
+        background-color: @white;
         padding: 8px 16px;
     }
 
     &:active {
-        .nclBlack(0.1);
+        .black(0.1);
         box-shadow: inset 0 2px 3px 0 @color;
-        border: solid 1px @ncl-silver;
+        border: solid 1px @silver;
         outline: none;
         border-radius: 2px;
-        background-color: @ncl-white;
+        background-color: @white;
         padding: 8px 16px;
     }
 
     &.disabled {
-        .nclDuskThree(0.24);
+        .duskThree(0.24);
         box-shadow: none;
         cursor: default;
-        background-color: @ncl-pale-grey-three;
-        border: solid 1px @ncl-pale-grey-three;
+        background-color: @pale-grey-three;
+        border: solid 1px @pale-grey-three;
         color: @color;
 
         &:hover, &:active {
@@ -75,7 +75,7 @@
 }
 
 .btn-close {
-    .nclDuskThree(0.64);
+    .duskThree(0.64);
     color: @color;
     right: 0;
     position: absolute;
@@ -86,13 +86,13 @@
     z-index: 11;
 
     &:hover {
-        .nclDuskThree(1);
+        .duskThree(1);
         color: @color;
     }
 }
 
 .ncl-new-entity-button {
-    color: @ncl-white;
+    color: @white;
     font-size: 13px;
     display: inline-block;
     vertical-align: top;
@@ -105,16 +105,16 @@
     line-height: initial;
     border-radius: 2px;
     border: none;
-    background-color: @ncl-dark-orange;
+    background-color: @dark-orange;
     outline: none;
 
     &:hover {
-        background-color: @ncl-orange;
+        background-color: @orange;
     }
 
     &.disabled {
-        background-color: @ncl-pale-grey;
-        border: solid 1px @ncl-pale-grey;
+        background-color: @pale-grey;
+        border: solid 1px @pale-grey;
         box-shadow: none;
         cursor: default;
     }
