--- a/src/nuclio/common/less/dialogs.less
+++ b/src/nuclio/common/less/dialogs.less
@@ -13,7 +13,7 @@
     justify-content: center;
 
     .ngdialog-content {
-        .nclBlack(0.25);
+        .black(0.25);
         box-shadow: 0 10px 20px 0 @color;
         animation-duration: @animation-duration;
         animation-timing-function: @animation-function;
@@ -21,7 +21,7 @@
         font-size: 16px;
         border-radius: 2px;
         max-width: 900px;
-        background-color: @ncl-white;
+        background-color: @white;
         z-index: 5;
         position: relative;
         padding: 19px 24px 23px 24px;
@@ -67,7 +67,7 @@
         }
 
         .title {
-            color: @ncl-dusk-three;
+            color: @dusk-three;
             font-family: @font-family-sans-serif;
             font-size: 20px;
             font-weight: 500;
@@ -82,7 +82,7 @@
                 padding: 0 0 20px;
 
                 .field-label {
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                     font-size: 14px;
                     font-weight: 500;
                     padding: 0;
@@ -106,7 +106,7 @@
                     }
 
                     .error {
-                        color: @ncl-darkish-pink;
+                        color: @darkish-pink;
                         font-size: 12px;
                         white-space: nowrap;
                     }
@@ -122,7 +122,7 @@
             .notification-text.title {
                 text-align: center;
                 padding-right: 0;
-                color: @ncl-darkish-pink;
+                color: @darkish-pink;
                 font-size: 20px;
                 font-weight: 500;
                 letter-spacing: normal;
@@ -135,7 +135,7 @@
                 font-size: 16px;
                 font-weight: normal;
                 letter-spacing: normal;
-                color: @ncl-dusk-three;
+                color: @dusk-three;
             }
 
             .nuclio-alert-icon {
@@ -166,9 +166,9 @@
     }
 
     .ngdialog-overlay {
-        .nclBlack(0.6);
+        .black(0.6);
         background: @color;
-        border: 2px solid @ncl-black;
+        border: 2px solid @black;
         animation-duration: @animation-duration;
         animation-timing-function: @animation-function;
     }
