--- a/src/nuclio/common/less/tooltips.less
+++ b/src/nuclio/common/less/tooltips.less
@@ -11,10 +11,10 @@
         width: 13px;
         height: 13px;
         transform: rotate(226deg);
-        border-right: 1px solid @ncl-pale-grey;
-        border-bottom: 1px solid @ncl-pale-grey;
+        border-right: 1px solid @pale-grey;
+        border-bottom: 1px solid @pale-grey;
         border-width: 1px;
-        background-color: @ncl-white;
+        background-color: @white;
     }
 
     &.bottom {
@@ -26,14 +26,14 @@
     }
 
     .tooltip-inner {
-        background-color: @ncl-white;
-        color: @ncl-dusk-three;
+        background-color: @white;
+        color: @dusk-three;
         border-radius: 2px;
         font-size: 14px;
         word-wrap: break-word;
         max-width: 280px;
         padding: 29px 30px;
         box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
-        border: solid 1px @ncl-pale-grey;
+        border: solid 1px @pale-grey;
     }
 }
