--- a/src/nuclio/projects/project/functions/create-function/create-function.less
+++ b/src/nuclio/projects/project/functions/create-function/create-function.less
@@ -29,7 +29,7 @@
                     max-width: 503px;
                     min-width: 272px;
                     height: 254px;
-                    background-color: @ncl-white;
+                    background-color: @white;
                     opacity: 0.9;
                     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
                     border-radius: 2px;
@@ -48,7 +48,7 @@
                             position: absolute;
                             top: 48px;
                             left: 50px;
-                            color: @ncl-dark-sky-blue;
+                            color: @dark-sky-blue;
                             font-size: 46px;
 
                             &.ncl-icon-template {
@@ -69,14 +69,14 @@
                         margin-right: 39px;
 
                         .type-title {
-                            color: @ncl-light-blue;
+                            color: @light-blue;
                             font-size: 18px;
                             font-weight: bold;
                         }
 
                         .type-description {
                             font-size: 14px;
-                            color: @ncl-dusk-three;
+                            color: @dusk-three;
                         }
                     }
 
@@ -89,11 +89,11 @@
                             align-items: center;
                             justify-content: center;
                             border-radius: 50%;
-                            .nclLightBlue(0.8);
-                            background-color: @ncl-light-blue;
+                            .lightBlue(0.8);
+                            background-color: @light-blue;
 
                             .icon {
-                                color: @ncl-white;
+                                color: @white;
                             }
                         }
                     }
