--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-version-row/function-version-row.less
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-version-row/function-version-row.less
@@ -12,7 +12,7 @@
             }
 
             .check-row {
-                background-color: @ncl-pale-grey-three;
+                background-color: @pale-grey-three;
             }
         }
     }
