--- a/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.less
+++ b/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.less
@@ -55,7 +55,7 @@
             font-size: 13px;
             align-items: center;
             justify-content: center;
-            color: @ncl-darkish-pink;
+            color: @darkish-pink;
         }
     }
 
