--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-logs/test-events-logs.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-logs/test-events-logs.less
@@ -1,9 +1,9 @@
 .ncl-test-events-logs {
     padding: 6px 17px 25px;
-    background-color: @ncl-white;
+    background-color: @white;
 
     .functional-buttons {
-        .nclDuskThree(0.64);
+        .duskThree(0.64);
         display: flex;
         justify-content: flex-end;
         color: @color;
@@ -13,25 +13,25 @@
             margin-right: 24px;
 
             &:hover {
-                color: @ncl-dusk-three;
+                color: @dusk-three;
             }
         }
     }
 
     .collapsed-row {
-        .nclBlack(0.2);
+        .black(0.2);
         display: flex;
         align-items: center;
         position: relative;
         height: 36px;
-        background-color: @ncl-white;
-        color: @ncl-dusk-three;
+        background-color: @white;
+        color: @dusk-three;
         box-shadow: 1.7px 1.1px 4px 0 @color;
-        border: solid 1px @ncl-pale-grey;
+        border: solid 1px @pale-grey;
         margin-bottom: 10px;
 
         .igz-icon-right {
-            .nclDuskThree(0.64);
+            .duskThree(0.64);
             font-size: 12px;
             color: @color;
             margin: 0 8px 0 12px;
@@ -48,7 +48,7 @@
             }
 
             &.ncl-icon-debug {
-                color: @ncl-orangish;
+                color: @orangish;
 
                 &:before {
                     font-size: 18px;
@@ -56,15 +56,15 @@
             }
 
             &.igz-icon-info-round {
-                color: @ncl-orangish;
+                color: @orangish;
             }
 
             &.igz-icon-warning {
-                color: @ncl-orangish;
+                color: @orangish;
             }
 
             &.igz-icon-cancel-path {
-                color: @ncl-orangish;
+                color: @orangish;
             }
         }
 
@@ -83,7 +83,7 @@
         }
 
         .ncl-icon-parameters {
-            .nclDuskThree(0.64);
+            .duskThree(0.64);
             color: @color;
             font-size: 14px;
             position: absolute;
@@ -93,9 +93,9 @@
     }
 
     .expanded-row {
-        background-color: @ncl-white;
-        color: @ncl-dusk-three;
-        border: solid 1px @ncl-pale-grey;
+        background-color: @white;
+        color: @dusk-three;
+        border: solid 1px @pale-grey;
         margin-bottom: 10px;
 
         .header {
@@ -105,7 +105,7 @@
             height: 36px;
 
             .igz-icon-down {
-                .nclDuskThree(0.64);
+                .duskThree(0.64);
                 font-size: 12px;
                 color: @color;
                 margin: 0 8px 0 12px;
@@ -122,7 +122,7 @@
                 }
 
                 &.ncl-icon-debug {
-                    color: @ncl-orangish;
+                    color: @orangish;
 
                     &:before {
                         font-size: 18px;
@@ -130,15 +130,15 @@
                 }
 
                 &.igz-icon-info-round {
-                    color: @ncl-orangish;
+                    color: @orangish;
                 }
 
                 &.igz-icon-warning {
-                    color: @ncl-orangish;
+                    color: @orangish;
                 }
 
                 &.igz-icon-cancel-path {
-                    color: @ncl-orangish;
+                    color: @orangish;
                 }
             }
 
@@ -151,7 +151,7 @@
             }
 
             .ncl-icon-parameters {
-                .nclDuskThree(0.64);
+                .duskThree(0.64);
                 position: absolute;
                 top: 9px;
                 right: 9px;
@@ -162,14 +162,14 @@
 
         .expanded-body {
             font-size: 14px;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
 
             .error {
                 width: 71%;
                 border-radius: 3px;
                 background-color: #fbe5e8;
-                border: solid 1px @ncl-darkish-pink;
-                color: @ncl-darkish-pink;
+                border: solid 1px @darkish-pink;
+                color: @darkish-pink;
                 word-wrap: break-word;
                 margin-left: 62px;
                 padding: 12px;
@@ -195,13 +195,13 @@
                     line-height: 2;
 
                     .labels {
-                        color: @ncl-greyish-purple;
+                        color: @greyish-purple;
                         font-size: 14px;
                         width: 30%;
                     }
 
                     .values {
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
                         font-size: 14px;
                         width: 70%;
                     }
@@ -213,7 +213,7 @@
     .no-logs {
         margin: 10px auto 0;
         font-size: 14px;
-        color: @ncl-pale-grey;
+        color: @pale-grey;
         text-align: center;
     }
 }
