--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -82,8 +82,8 @@
 
         .code-entry-section {
             margin-bottom: 20px;
-            background-color: @ncl-white;
-            border: 1px solid @ncl-pale-grey-two;
+            background-color: @white;
+            border: 1px solid @pale-grey-two;
 
             .code-entry-row {
                 display: flex;
@@ -95,7 +95,7 @@
                     .col-label {
                         margin-bottom: 2px;
                         font-size: 14px;
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
                     }
                 }
 
