--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.less
@@ -45,7 +45,7 @@
                         align-items: center;
 
                         .values-label {
-                            .nclDuskThree(0.9);
+                            .duskThree(0.9);
                             margin: 0 17px 0 8px;
                             font-size: 14px;
                             font-weight: normal;
@@ -57,7 +57,7 @@
 
                         .question-mark {
                             margin-top: 6px;
-                            color: @ncl-dark-sky-blue;
+                            color: @dark-sky-blue;
                             font-size: 18px;
                         }
                     }
