--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.less
@@ -5,7 +5,7 @@
         font-size: 20px;
         font-weight: 500;
         text-align: left;
-        color: @ncl-dusk-three;
+        color: @dusk-three;
     }
 
     .main-content {
@@ -15,7 +15,7 @@
         .field-label {
             font-size: 14px;
             text-align: left;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
         }
 
         .validating-input-field {
