--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -7,7 +7,7 @@
             font-size: 14px;
             font-weight: 500;
             text-align: left;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
         }
 
         .validating-input-field {
@@ -42,8 +42,8 @@
             .file-block {
                 height: 32px;
                 border-radius: 2px;
-                background-color: @ncl-light-grayish-blue;
-                border: solid 1px @ncl-pale-grey;
+                background-color: @light-grayish-blue;
+                border: solid 1px @pale-grey;
 
                 .file-name {
                     height: 14px;
@@ -60,18 +60,18 @@
 
                 .progress {
                     position: absolute;
-                    background-color: @ncl-white;
+                    background-color: @white;
                     display: inline-block;
                     width: 95px;
                     height: 6px;
-                    border: 1px solid @ncl-pale-grey;
+                    border: 1px solid @pale-grey;
                     border-radius: 2px;
                     top: 13px;
                     right: 28px;
 
                     .progress-bar {
                         border-radius: 2px;
-                        background-color: @ncl-dark-sky-blue;
+                        background-color: @dark-sky-blue;
                     }
                 }
 
@@ -94,7 +94,7 @@
                 .ncl-icon-script,
                 .ncl-icon-file,
                 .ncl-icon-close {
-                    color: @ncl-greyish-purple;
+                    color: @greyish-purple;
                 }
             }
 
@@ -108,12 +108,12 @@
 
                     .progress-percents {
                         margin-left: 15px;
-                        color: @ncl-dark-grey;
+                        color: @dark-grey;
                     }
 
                     .file-name {
                         margin-left: 8px;
-                        color: @ncl-dark-sky-blue;
+                        color: @dark-sky-blue;
                         text-overflow: ellipsis;
                     }
 
@@ -149,11 +149,11 @@
 
                     .file-name {
                         margin-left: 9px;
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
 
                         .uploaded-file-directory {
                             margin-left: 8px;
-                            color: @ncl-dark-greyish-blue;
+                            color: @dark-greyish-blue;
                         }
                     }
                 }
@@ -186,12 +186,12 @@
             font-size: 22px;
             margin: -10px -15px 0 0;
             border-radius: 50%;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
         }
 
         .active {
-            .nclBlack(0.1);
-            background-color: @ncl-silver;
+            .black(0.1);
+            background-color: @silver;
             box-shadow: inset 0px 2px 3px 0 @color;
         }
 
