--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
@@ -11,8 +11,8 @@
 
             .configuration-block {
                 padding: 16px 23px 16px;
-                background-color: @ncl-white;
-                border: solid 1px @ncl-pale-grey;
+                background-color: @white;
+                border: solid 1px @pale-grey;
                 flex-grow: 1;
                 flex-basis: 500px;
                 overflow: hidden;
@@ -30,7 +30,7 @@
                     font-stretch: normal;
                     letter-spacing: normal;
                     text-align: left;
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                     margin-bottom: 12px;
                 }
 
@@ -44,7 +44,7 @@
                         font-stretch: normal;
                         letter-spacing: normal;
                         text-align: left;
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
                         padding: 0;
                     }
                 }
