--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.less
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.less
@@ -16,8 +16,8 @@
 
             .monitoring-block {
                 padding: 16px 23px 16px;
-                background-color: @ncl-white;
-                border: solid 1px @ncl-pale-grey;
+                background-color: @white;
+                border: solid 1px @pale-grey;
                 flex-grow: 1;
                 flex-basis: 500px;
                 overflow: hidden;
@@ -49,12 +49,12 @@
                 .monitoring-block-title {
                     font-size: 16px;
                     font-weight: bold;
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                 }
 
                 .monitoring-invocation-url {
                     .invocation-url-common();
-                    color: @ncl-dark-sky-blue;
+                    color: @dark-sky-blue;
                     text-decoration: none;
                 }
 
@@ -98,7 +98,7 @@
 
                     .error-panel {
                         .logs-common();
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
                         padding: 5px;
                         margin-left: 24px;
                         max-height: 232px;
