--- a/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.less
+++ b/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.less
@@ -7,7 +7,7 @@
         margin-left: 50px;
 
         .title {
-            color: @ncl-dusk-three;
+            color: @dusk-three;
             font-size: 16px;
             font-weight: bold;
         }
@@ -28,7 +28,7 @@
                     .input-label {
                         font-size: 14px;
                         font-weight: 600;
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
                     }
 
                     igz-validating-input-field {
@@ -46,12 +46,12 @@
                     .input-label {
                         font-size: 14px;
                         font-weight: 600;
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
                     }
 
                     igz-default-dropdown {
                         .default-dropdown {
-                            background-color: @ncl-white;
+                            background-color: @white;
 
                             .default-dropdown-field {
                                 &:focus {
