--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
@@ -16,7 +16,7 @@
                 .input-label {
                     font-size: 14px;
                     font-weight: 600;
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                 }
 
                 igz-validating-input-field {
@@ -32,7 +32,7 @@
         .title {
             font-size: 16px;
             font-weight: bold;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
         }
 
         .function-templates {
@@ -43,7 +43,7 @@
             .function-template-wrapper {
                 width: 400px;
                 height: 268px;
-                background-color: @ncl-white;
+                background-color: @white;
                 box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
                 border-radius: 2px;
                 padding: 26px 34px 23px 23px;
@@ -51,9 +51,9 @@
                 position: relative;
 
                 &.selected {
-                    border: 2px solid @ncl-blue;
+                    border: 2px solid @dark-sky-blue;
                     box-shadow: inherit;
-                    background-color: @ncl-light-blue-three;
+                    background-color: @light-blue-three;
 
                     &:before {
                         content: '\e965';
@@ -62,7 +62,7 @@
                         position: absolute;
                         top: 0;
                         left: 86px;
-                        color: @ncl-light-grey-two;
+                        color: @light-grey-two;
                         height: 100%;
                         display: flex;
                         align-items: center;
@@ -73,11 +73,11 @@
                     position: absolute;
                     top: 13px;
                     right: 17px;
-                    color: @ncl-silver;
+                    color: @silver;
                     font-size: 18px;
 
                     &.selected {
-                        color: @ncl-blue;
+                        color: @dark-sky-blue;
 
                         &:before {
                             content: '\e934';
@@ -90,7 +90,7 @@
                     width: 343px;
 
                     .template-title {
-                        color: @ncl-light-blue-two;
+                        color: @light-blue-two;
                         font-size: 19px;
                         font-weight: bold;
                         width: 100%;
@@ -98,7 +98,7 @@
                     }
 
                     .template-description {
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
                         font-size: 15px;
                         width: 100%;
                         margin-bottom: 52px;
