--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
@@ -5,9 +5,9 @@
     .function-title-block {
         height: 50px;
         position: relative;
-        background-color: @ncl-white;
+        background-color: @white;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-        border: solid 1px @ncl-pale-grey;
+        border: solid 1px @pale-grey;
 
         .common-table-cells-container {
             cursor: pointer;
@@ -33,7 +33,7 @@
                 position: absolute;
                 bottom: 0;
                 right: 0;
-                background-color: @ncl-white;
+                background-color: @white;
             }
 
             .description-content:after {
@@ -42,7 +42,7 @@
                 width: 100%;
                 height: 16px;
                 z-index: 1;
-                background-color: @ncl-white;
+                background-color: @white;
             }
         }
 
@@ -56,7 +56,7 @@
 
                 &.igz-icon-right, &.igz-icon-down {
                     font-size: 12px;
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                 }
             }
         }
@@ -74,12 +74,12 @@
 
             &:hover {
                 .common-table-cells-container {
-                    background-color: @ncl-white;
+                    background-color: @white;
                 }
 
                 .actions-menu {
                     visibility: visible;
-                    background-color: @ncl-white;
+                    background-color: @white;
                 }
             }
         }
