--- a/src/nuclio/projects/project/functions/function.less
+++ b/src/nuclio/projects/project/functions/function.less
@@ -1,10 +1,10 @@
 ncl-functions {
     .search-input-not-found {
         height: 48px;
-        background-color: @ncl-light-grey;
-        border: solid 1px @ncl-pale-grey;
+        background-color: @light-grey;
+        border: solid 1px @pale-grey;
         font-size: 14px;
-        color: @ncl-dusk-three;
+        color: @dusk-three;
     }
 
     .invisible {
