--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.less
@@ -1,11 +1,11 @@
 .ncl-test-events-navigation-tabs {
     background: #f8f8fb;
     height: 40px;
-    border-top: 1px solid @ncl-pale-grey;
-    border-bottom: 1px solid @ncl-pale-grey;
+    border-top: 1px solid @pale-grey;
+    border-bottom: 1px solid @pale-grey;
 
     .test-events-navigation-tab {
-        .nclDuskThree(0.64);
+        .duskThree(0.64);
         position: relative;
         float: left;
         height: 27px;
@@ -20,13 +20,13 @@
 
         &.active, &.active:hover {
             background: none;
-            color: @ncl-dusk-three;
-            border-bottom: 2px solid @ncl-dusk-three;
+            color: @dusk-three;
+            border-bottom: 2px solid @dusk-three;
             font-weight: bold;
 
             .badge {
-                color: @ncl-white;
-                background-color: @ncl-light-grey-blue;
+                color: @white;
+                background-color: @light-grey-blue;
             }
         }
 
@@ -36,12 +36,12 @@
             padding: 3px 7px;
             font-size: 12px;
             font-weight: 500;
-            color: @ncl-greyish-purple;
+            color: @greyish-purple;
             line-height: 1;
             vertical-align: middle;
             white-space: nowrap;
             text-align: center;
-            background-color: @ncl-pale-grey;
+            background-color: @pale-grey;
             border-radius: 7.5px;
             margin-left: 7px;
             margin-top: -4px;
