--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-data-bindings/version-configuration-data-bindings.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-data-bindings/version-configuration-data-bindings.less
@@ -8,7 +8,7 @@
                 font-size: 14px;
                 font-weight: bold;
                 letter-spacing: normal;
-                color: @ncl-dusk-three;
+                color: @dusk-three;
                 height: 46px;
             }
 
@@ -52,15 +52,15 @@
         padding-left: 16px;
         font-size: 14px;
         line-height: 24px;
-        .nclDuskThree(0.64);
+        .duskThree(0.64);
         color: @color;
         cursor: pointer;
-        border: 1px solid @ncl-pale-grey;
+        border: 1px solid @pale-grey;
         box-shadow: none;
 
         .igz-icon-add-round {
             font-size: 24px;
-            color: @ncl-orange;
+            color: @orange;
             height: 34px;
             padding-right: 8px;
             display: flex;
