--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
@@ -26,7 +26,7 @@
                         align-items: center;
 
                         .values-label {
-                            .nclDuskThree(0.9);
+                            .duskThree(0.9);
                             margin: 0 25px 0 8px;
                             font-size: 14px;
                             font-weight: normal;
