--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.less
@@ -30,7 +30,7 @@
             font-family: @font-family-sans-serif;
             font-size: 14px;
             text-align: left;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
         }
 
         .textarea-field {
