--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -73,8 +73,8 @@
         height: 36px;
         margin-top: 7px;
         .duskThree(0.64);
-        background-color: @ncl-white;
-        border: solid 1px @ncl-pale-grey;
+        background-color: @white;
+        border: solid 1px @pale-grey;
         font-size: 14px;
         font-weight: normal;
         font-style: normal;
@@ -85,7 +85,7 @@
 
         .igz-icon-add-round {
             margin: 3px 8px 0 15px;
-            color: @ncl-orange;
+            color: @orange;
             font-size: 24px;
         }
     }
@@ -112,20 +112,20 @@
     .ncl-edit-version-execution-result {
         margin: 17px 24px;
         padding: 16px 13px;
-        background-color: @ncl-light-green;
-        border: solid 1px @ncl-green-aquamarine;
+        background-color: @light-green;
+        border: solid 1px @tealish;
         position: relative;
 
         &.failed {
-            .nclDarkishPink(0.1);
+            .darkishPink(0.1);
             background-color: @color;
-            border: solid 1px @ncl-darkish-pink;
+            border: solid 1px @darkish-pink;
         }
 
         &.in-progress {
-            .nclSunflowerYellow(0.1);
+            .sunflowerYellow(0.1);
             background-color: @color;
-            border: solid 1px @ncl-sunflower-yellow;
+            border: solid 1px @sunflower-yellow;
         }
 
         .igz-scrollable-container {
@@ -148,8 +148,8 @@
 
             .log-panel {
                 .logs-common();
-                background-color: @ncl-dark-grey;
-                color: @ncl-very-light-grey;
+                background-color: @dark-grey;
+                color: @light-grey-three;
                 padding: 5px;
                 margin: 5px 0 0 4px;
                 min-height: 280px;
@@ -158,7 +158,7 @@
 
                 .log-entry {
                     .log-entry-time {
-                        color: @ncl-solid-grey;
+                        color: @solid-grey;
                     }
 
                     .log-entry-level-debug{
@@ -170,11 +170,11 @@
                     }
 
                     .log-entry-level-warn{
-                        color: @ncl-sunflower-yellow;
+                        color: @sunflower-yellow;
                     }
 
                     .log-entry-level-error {
-                        color: @ncl-darkish-pink;
+                        color: @darkish-pink;
                     }
 
                     .log-entry-message {
@@ -185,7 +185,7 @@
         }
 
         .ncl-execution-result-status {
-            color: @ncl-darkish-pink;
+            color: @darkish-pink;
             line-height: 24px;
             font-size: 14px;
             font-weight: 700;
@@ -195,11 +195,11 @@
             justify-content: center;
 
             &.succeeded {
-                color: @ncl-green-aquamarine;
+                color: @tealish;
             }
 
             &.in-progress {
-                color: @ncl-pale-orange;
+                color: @pale-orange;
             }
 
             .result-status-icon {
@@ -234,7 +234,7 @@
                 display: inline-block;
                 vertical-align: top;
                 font-family: @font-family-sans-serif;
-                color: @ncl-dusk-three;
+                color: @dusk-three;
                 font-size: 16px;
                 font-weight: bold;
                 cursor: pointer;
@@ -278,12 +278,12 @@
                     line-height: 36px;
 
                     &.failed {
-                        .nclDarkishPink(0.3);
+                        .darkishPink(0.3);
                         border: solid 1px @color;
                     }
 
                     &.in-progress {
-                        .nclSunflowerYellow(0.4);
+                        .sunflowerYellow(0.4);
                         border: solid 1px @color;
                     }
 
@@ -301,7 +301,7 @@
                     line-height: 16px;
 
                     .label-cell {
-                        color: @ncl-greyish-purple;
+                        color: @greyish-purple;
                         width: 185px;
                     }
                     .value-cell {
