--- a/src/nuclio/projects/projects-welcome-page/projects-welcome-page.less
+++ b/src/nuclio/projects/projects-welcome-page/projects-welcome-page.less
@@ -12,7 +12,7 @@
             font-size: 24px;
             font-weight: bold;
             letter-spacing: normal;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
             margin-bottom: 8px;
         }
 
@@ -21,7 +21,7 @@
             font-weight: normal;
             letter-spacing: normal;
             text-align: center;
-            color: @ncl-greyish-purple;
+            color: @greyish-purple;
         }
 
         .welcome-icon {
@@ -65,10 +65,10 @@
             height: 39px;
             font-size: 14px;
             padding: 12px 31px;
-            background-image: linear-gradient(5deg, @ncl-orangish, @ncl-pale-orange);
+            background-image: linear-gradient(5deg, @orangish, @pale-orange);
 
             &:hover {
-                background: @ncl-dark-orange;
+                background: @dark-orange;
             }
         }
     }
